--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <hr>
           </div>
           <div class="col-lg-12 my-auto">
-          	<!-- Begin MailChimp Signup Form -->
+<!--          	<!-- Begin MailChimp Signup Form 
 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -36,7 +36,7 @@
     <div id="mc_embed_signup_scroll">
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2f4fa29d9517787e424dca1d0_70e29adc7a" tabindex="-1" value=""></div>
-    <div class="clear"><button class="btn btn-primary btn-xl">Find Out More</button></div>
+    <div class="clear"><button class="btn btn-primary btn-xl">Find Out More</button></div> 
     </div>
 </form>
 </div>
