--- a/wicca/Reading.html
+++ b/wicca/Reading.html
@@ -33,5 +33,5 @@ s=books&ie=UTF8&qid=1518186450&sr=1-1&keywords=drawing+down+the+moon" target="_b
 </div>
 
 </body>
-<a href="wicca.html">Home</a>
+<a href="index.html">Home</a>
 </html>
