--- a/wicca/Founders.html
+++ b/wicca/Founders.html
@@ -12,7 +12,7 @@
 
 	<div class=container1>
 	<a href="https://en.wikipedia.org/wiki/Gerald_Gardner_(Wiccan)" target="_blank"><h3>Gerald Gardner</h3><img src="gardner.jpg"></a>
-    <a href="https://en.wikipedia.org/wiki/Doreen_Valiente" target="_blank"><h3>Doreen Valiente</h3><img src="Doreen.jpg"></a>
+    <a href="https://en.wikipedia.org/wiki/Doreen_Valiente" target="_blank"><h3>Doreen Valiente</h3><img src="doreen.jpg"></a>
     <a href="https://en.wikipedia.org/wiki/Janet_Farrar" target=_blank"><h3>Janet Farrar</h3><img src="Janet.jpg"></a>
 </div>
 
