--- a/wicca/Founders.html
+++ b/wicca/Founders.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="founders.css">
 </head>
-<a href="wicca.html">Home</a>
+<a href="index.html">Home</a>
 <h1>Founders of Modern Wicca and Witchcraft</h1>
 <body>
 <div class="container">
