--- a/wicca/Reading.html
+++ b/wicca/Reading.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
 	<title>Recommended Reading</title>
 	<link rel="stylesheet" href="wicca2.css">
