--- a/wicca/Reading.html
+++ b/wicca/Reading.html
@@ -12,6 +12,7 @@ body {
         background-image: url("./books.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
+	        width:100%;
 }
 	</style>
 <body>
